# ocrd_calamari

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README-DEV.md  README.md  ocrd-tool.json  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  ruff.toml  setup.py
.circleci/: config.yml
.github/workflows/: docker.yml
ocrd_calamari/: __init__.py  cli.py  config.py  fix_calamari1_model.py  ocr.py  ocrd-tool.json  recognize.py  util.py
test/: base.py  conftest.py  test_recognize.py
