[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-ocrd"]

[project]
name = "ocrd_calamari"
authors = [
    {name = "Mike Gerber", email = "mike.gerber@sbb.spk-berlin.de"},
    {name = "Konstantin Baierer", email = "unixprog@gmail.com"},
]
description = "Recognize text using Calamari OCR and the OCR-D framework"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.8"
keywords = ["ocr", "ocr-d", "calamari-ocr"]

dynamic = ["version", "dependencies", "optional-dependencies"]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing",
]

[project.scripts]
ocrd-calamari-recognize = "ocrd_calamari.cli:ocrd_calamari_recognize"
fix-calamari1-model = "ocrd_calamari.fix_calamari1_model:fix_calamari1_model"

[project.urls]
Homepage = "https://github.com/OCR-D/ocrd_calamari"
Repository = "https://github.com/OCR-D/ocrd_calamari.git"


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["ocrd_calamari"]

[tool.pytest.ini_options]
minversion = 6.0
addopts = "--strict-markers"
markers = [
    "integration: integration tests",
]


[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]

ignore_missing_imports = true


strict = true

disallow_subclassing_any = false
# ❗ error: Class cannot subclass "Processor" (has type "Any")
disallow_any_generics = false
disallow_untyped_defs = false
disallow_untyped_calls = false


[tool.ruff.lint]
select = ["E", "F", "I"]


[tool.coverage.run]
branch = true
source = [
    "ocrd_calamari"
]

[tool.coverage.report]
exclude_also = [
    "if self\\.debug",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
ignore_errors = true
omit = [
    "ocrd_calamari/cli.py"
]
